force-app/main/default/objects/Citation_Provider_Data__c/Citation_Provider_Data__c.object-meta.xml
<CustomObject>
    <label>Citation Provider Data</label>
    <nameField>
        <displayFormat>CPD-{00000}</displayFormat>
        <label>Record Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Citation Provider Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>