force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_All_Authors__c.field-meta.xml
<CustomField>
    <fullName>I_RS_All_Authors__c</fullName>
    <label>All Authors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>