force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Document_Type__c</fullName>
    <label>Document Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>