force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_End_Page__c.field-meta.xml
<CustomField>
    <fullName>I_RS_End_Page__c</fullName>
    <label>End Page</label>
    <length>10</length>
    <type>Text</type>
</CustomField>