force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_First_Author_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_RS_First_Author_Flag__c</fullName>
    <label>First Author Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>