force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_First_Author_Surname__c.field-meta.xml
<CustomField>
    <fullName>I_RS_First_Author_Surname__c</fullName>
    <label>First Author Surname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>