force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ID__c</fullName>
    <label>ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>