force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_Institution__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Institution__c</fullName>
    <label>Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>