force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_ISSN__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ISSN__c</fullName>
    <label>ISSN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>