force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_Journal_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Journal_Title__c</fullName>
    <label>Journal Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>