force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_Orig_DOI__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Orig_DOI__c</fullName>
    <label>Orig. DOI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>