force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_Orig_ISSN__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Orig_ISSN__c</fullName>
    <label>Orig. ISSN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>