force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_Orig_UT__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Orig_UT__c</fullName>
    <label>Orig. UT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>