force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_Orig_Volume__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Orig_Volume__c</fullName>
    <label>Orig. Volume</label>
    <length>10</length>
    <type>Text</type>
</CustomField>