force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_Orig_Year__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Orig_Year__c</fullName>
    <label>Orig. Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>