force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_Publication_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Publication_Title__c</fullName>
    <label>Publication Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>