force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_Research_Output__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Output__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Output</label>
    <referenceTo>Research_Output__c</referenceTo>
    <relationshipLabel>Citation Provider Data</relationshipLabel>
    <relationshipName>Citation_Provider_Data</relationshipName>
    <type>Lookup</type>
</CustomField>