force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_Volume_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Volume_Flag__c</fullName>
    <label>Volume Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>