force-app/main/default/objects/Citation_Provider_Data__c/fields/I_RS_WoS_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_WoS_URL__c</fullName>
    <label>WoS URL</label>
    <type>Url</type>
</CustomField>