force-app/main/default/objects/Citation_Provider_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Publication_Title__c</columns>
    <columns>I_RS_Journal_Title__c</columns>
    <columns>I_RS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>